--- a/Web.config
+++ b/Web.config
@@ -21,6 +21,9 @@
     <system.web>
       <httpRuntime requestValidationMode="2.0" />
     </system.web>
+      <system.web>
+        <customErrors mode="Off"/>
+      </system.web>
     </location>
 
 </configuration>
